[gd_scene load_steps=10 format=2]

[ext_resource path="res://Trees/Tree2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Trees/Tree3.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://VegetableHunter_Assets/World/grass_large.glb" type="PackedScene" id=4]
[ext_resource path="res://Trees/Tree4.tscn" type="PackedScene" id=5]
[ext_resource path="res://VegetableHunter_Assets/World/grass_leafs.glb" type="PackedScene" id=6]
[ext_resource path="res://Trees/Tree1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Level/Level.gd" type="Script" id=8]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.188235, 0.760784, 0.152941, 1 )

[node name="Level" type="Spatial"]
script = ExtResource( 8 )

[node name="Trees" type="Spatial" parent="."]

[node name="Tree1" parent="Trees" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.79276 )

[node name="Tree6" parent="Trees" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.70427, 0.0250793, 3.4801 )

[node name="Tree2" parent="Trees" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.82075, 0, -3.54535 )

[node name="Tree5" parent="Trees" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.72352, 0, 3.25211 )

[node name="Tree3" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06513, 0, 0 )

[node name="Tree4" parent="Trees" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.10798, 0, 0 )

[node name="Grass" type="Spatial" parent="."]

[node name="grass_leafs2" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.018528, 0.0119737, -0.420374 )

[node name="grass_leafs" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.424328, 0.0421789, 0 )

[node name="grass_large" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0299094, 0 )

[node name="grass_large2" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 0.865702, 0, -0.500559, 0, 1, 0, 0.500559, 0, 0.865702, -0.379387, 0.048928, 0 )

[node name="grass_leafs3" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.018528, 0.0548142, 2.27654 )

[node name="grass_leafs4" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.424328, 0.0850194, 2.69691 )

[node name="grass_large3" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.06763, 0.0727499, 2.69691 )

[node name="grass_large4" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 0.865702, 0, -0.500559, 0, 1, 0, 0.500559, 0, 0.865702, -0.379387, 0.0917685, 2.69691 )

[node name="grass_leafs5" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.90502, 0.0548142, 2.27654 )

[node name="grass_leafs6" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.46216, 0.0850194, 2.69691 )

[node name="grass_large5" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.88649, 0.0727499, 2.69691 )

[node name="grass_large6" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 0.865702, 0, -0.500559, 0, 1, 0, 0.500559, 0, 0.865702, -2.26588, 0.0917685, 2.69691 )

[node name="grass_leafs7" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.36321, 0.0548142, 2.27654 )

[node name="grass_leafs8" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.80607, 0.0850194, 2.69691 )

[node name="grass_large7" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.33847, 0.0727499, 0.582354 )

[node name="grass_large8" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 0.865702, 0, -0.500559, 0, 1, 0, 0.500559, 0, 0.865702, 1.00236, 0.0917685, 2.69691 )

[node name="grass_leafs9" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.36321, 0.0548142, -0.880851 )

[node name="grass_leafs10" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.80607, 0.0850194, -0.460477 )

[node name="grass_large9" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 0.883512, 0, -0.468408, 0, 1, 0, 0.468408, 0, 0.883512, 1.37964, 0.0727499, -0.460477 )

[node name="grass_large10" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 0.865702, 0, -0.500559, 0, 1, 0, 0.500559, 0, 0.865702, 1.00236, 0.0917685, -0.460477 )

[node name="grass_leafs11" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 0.514395, 0, -0.857554, 0, 1, 0, 0.857554, 0, 0.514395, -1.77043, 0.0548142, -0.813941 )

[node name="grass_leafs12" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 0.514395, 0, -0.857554, 0, 1, 0, 0.857554, 0, 0.514395, -1.90313, 0.0850194, -0.21793 )

[node name="grass_large11" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 0.514395, 0, -0.857554, 0, 1, 0, 0.857554, 0, 0.514395, -2.1214, 0.0727499, -0.581814 )

[node name="grass_large12" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 0.0160563, 0, -0.999871, 0, 1, 0, 0.999871, 0, 0.0160563, -2.31655, 0.0917685, -0.907159 )

[node name="grass_leafs13" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 0.980312, 0, -0.197452, 0, 1, 0, 0.197452, 0, 0.980312, 1.89873, 0.0548142, -3.17755 )

[node name="grass_leafs14" parent="Grass" instance=ExtResource( 6 )]
transform = Transform( 0.980312, 0, -0.197452, 0, 1, 0, 0.197452, 0, 0.980312, 2.24986, 0.0850194, -2.67801 )

[node name="grass_large13" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 0.980312, 0, -0.197452, 0, 1, 0, 0.197452, 0, 0.980312, 1.83389, 0.0727499, -2.7618 )

[node name="grass_large14" parent="Grass" instance=ExtResource( 4 )]
transform = Transform( 0.749822, 0, -0.661639, 0, 1, 0, 0.661639, 0, 0.749822, 1.46197, 0.0917685, -2.83671 )

[node name="level" type="Spatial" parent="."]

[node name="Platform" type="CSGBox" parent="level"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.37375, -0.699384, -1.15335 )
use_collision = true
width = 10.0
height = 0.1
depth = 10.0
material = SubResource( 1 )

[node name="Wall1" type="CSGBox" parent="level/Platform"]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0.961102, 4.94045 )
width = 10.0
depth = 0.1

[node name="Wall2" type="CSGBox" parent="level/Platform"]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0.961102, -4.82016 )
width = 10.0
depth = 0.1

[node name="Wall3" type="CSGBox" parent="level/Platform"]
transform = Transform( -4.37113e-08, 0, -0.999999, 0, 1, 0, 0.999999, 0, -4.37113e-08, -4.84985, 0.916865, 0.00503683 )
width = 10.0
depth = 0.1

[node name="Wall4" type="CSGBox" parent="level/Platform"]
transform = Transform( -4.37113e-08, 0, -0.999999, 0, 1, 0, 0.999999, 0, -4.37113e-08, 5.00863, 0.961102, -0.0833549 )
width = 10.0
depth = 0.1

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.066958, -0.101676, -0.0796179 )

[node name="Timers" type="Node" parent="."]

[node name="Timer1" type="Timer" parent="Timers"]
autostart = true

[node name="Timer2" type="Timer" parent="Timers"]
wait_time = 1.2
autostart = true

[node name="Timer3" type="Timer" parent="Timers"]
wait_time = 1.6
autostart = true

[node name="Timer4" type="Timer" parent="Timers"]
wait_time = 1.5
autostart = true

[node name="Timer5" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[node name="Positions" type="Node" parent="."]

[node name="Start1" type="Position3D" parent="Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.243225, 4.98857, -6.57172 )

[node name="Start2" type="Position3D" parent="Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14655, 4.98857, -1.80521 )

[node name="Start3" type="Position3D" parent="Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.67729, 4.98857, -3.38327 )

[node name="Start4" type="Position3D" parent="Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.2657, 4.98857, -3.84123 )

[node name="Start5" type="Position3D" parent="Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.41511, 4.98857, -6.57172 )

[connection signal="timeout" from="Timers/Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timers/Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timers/Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timers/Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timers/Timer5" to="." method="_on_Timer5_timeout"]
